# SmartPrint-Business-System

./: .env.example  .gitignore  README.md  VERCEL_SETUP.md  VERCEL_TROUBLESHOOTING.md  main.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py
backend/: .env.example  alembic.ini  main.py  requirements.txt  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 20260424_0001_initial_schema.py  20260426_0002_add_users_table.py
backend/app/: main.py
backend/app/api/v1/: auth.py  routes.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: auth.py  entities.py
backend/app/services/: business.py
backend/tests/: test_health.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  authStore.ts  index.css  store.ts  types.ts  utils.ts
frontend/src/components/: ConfirmModal.tsx  Navigation.tsx  Toast.tsx  Topbar.tsx  UI.tsx
frontend/src/components/layout/: Primitives.tsx
frontend/src/pages/: CustomerDetail.tsx  Customers.tsx  Dashboard.tsx  Expenses.tsx  Inventory.tsx  Landing.tsx  Login.tsx  NewOrder.tsx  OrderDetail.tsx  OrderHistory.tsx  Orders.tsx  Payments.tsx  Pricing.tsx  Reports.tsx
frontend/src/services/: api.ts
frontend/src/theme/: ThemeProvider.tsx  themeStore.ts
screenshots/: README.md
